--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ django-js-asset==2.2.0
 whitenoise==6.7.0
 psycopg2==2.9.9
 pillow==10.4.0
+pandas==2.2.3
+openpyxl==3.1.5
 sqlparse==0.5.1
 tzdata==2024.1
-requests
+requests==2.32.3
